# PyFTS5

./: LICENSE  README.md  nb.ipynb  pyproject.toml  test.py
.github/workflows/: python-publish.yml
pyfts5/: core.py
tests/: test_core.py
